# mollotov

./: .gitignore  .swiftlint.yml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  docs.md  pnpm-lock.yaml
.github/workflows/: ios.yml  lint.yml  linux-release.yml  macos.yml  pages.yml  release.yml
apps/android/: .editorconfig  build.gradle.kts
apps/android/app/src/main/cpp/: CMakeLists.txt  kelpie_jni.cpp  mollotov_jni.cpp
apps/ios/: NATIVE_INTEGRATION.md  Project.swift
apps/linux/: CMakeLists.txt  Dockerfile  docker-compose.yml
apps/linux/src/: bookmarks_view.cpp  bookmarks_view.h  device_info_linux.cpp  device_info_linux.h  gtk_browser_view.cpp  gtk_browser_view.h  gui_shell.cpp  gui_shell.h  headless_shell.cpp  headless_shell.h  history_view.cpp  history_view.h  http_server.cpp  http_server.h  linux_app.cpp  linux_app.h  linux_app_api.cpp  linux_app_internal.h  main.cpp  mdns_avahi.cpp  mdns_avahi.h  network_inspector.cpp  network_inspector.h  settings_view.cpp  settings_view.h  stub_renderer.cpp  stub_renderer.h  tap_runtime_utils.cpp  tap_runtime_utils.h  toast_view.cpp  toast_view.h  ui_theme.cpp  ui_theme.h  url_bar.cpp  url_bar.h  web_runtime_utils.cpp  web_runtime_utils.h
apps/macos/: NATIVE_INTEGRATION.md  project.yml
apps/windows/: CMakeLists.txt
apps/windows/resources/: manifest.xml  mollotov.rc  resource.h
apps/windows/src/: bookmarks_view.cpp  bookmarks_view.h  device_info_windows.cpp  device_info_windows.h  history_view.cpp  history_view.h  main.cpp  mdns_windows.cpp  mdns_windows.h  network_inspector.cpp  network_inspector.h  settings_view.cpp  settings_view.h  toast_view.cpp  toast_view.h  url_bar.cpp  url_bar.h  win32_browser_view.cpp  win32_browser_view.h  win32_shell.cpp  win32_shell.h  windows_app.cpp  windows_app.h  windows_app_server.cpp
assets/diagnostics/: coordinate-calibration.html
docs/: architecture.md  brief.md  browser-engines.md  cli.md  functionality.md  tech-stack.md
docs/api/: README.md  browser.md  core.md  devtools.md  llm.md
docs/plans/: 2026-03-30-apple-tv-external-display.md  2026-03-30-macos-app.md  2026-03-31-macos-centered-viewport-shell.md  2026-04-01-desktop-shared-core-refactor.md  2026-04-01-engine-chromium-desktop.md  2026-04-01-ipad-mobile-stage.md  2026-04-01-ipad-view-menu-viewport-presets.md  2026-04-01-linux-cef-wiring.md  2026-04-01-linux-ui-parity.md  2026-04-01-macos-gecko-bundled.md  2026-04-01-macos-gecko-renderer.md  2026-04-01-macos-welcome-card.md  2026-04-01-shared-viewport-presets-mcp.md  2026-04-01-windows-desktop-plan.md  2026-04-01-windows-linux-portability.md  2026-04-02-3d-dom-snapshot.md  2026-04-02-local-inference-ui.md  2026-04-02-local-inference.md  2026-04-02-macos-orientation-api.md  2026-04-02-tablet-viewport-menu-alignment.md  2026-04-06-android-dialog-handling.md  2026-04-06-android-keyboard-windowinsets.md  2026-04-06-android-scripted-recording-parity.md  2026-04-06-core-parity-gap.md  2026-04-06-functional-parity-audit.md  2026-04-06-platform-completion.md  2026-04-11-mobile-mdns-lifecycle.md  2026-04-13-android-handler-parity.md  2026-04-13-annotation-lifecycle-expiry.md  2026-04-13-coordinate-calibration.md  2026-04-13-history-retention-and-url-autocomplete.md  2026-04-13-interaction-tool-parity.md  2026-04-13-issue-sweep-batch-1.md  2026-04-13-issue-sweep-batch-2.md  (+8 more)
native/: CMakeLists.txt
native/core-ai/: CMakeLists.txt  README.md
native/core-ai/include/mollotov/: ai_c_api.h
native/core-ai/src/: ai_c_api.cpp  ai_c_api_internal.h  hf_cloud_client.cpp  hf_cloud_client.h  model_catalog.cpp  model_catalog.h  model_store.cpp  ollama_client.cpp  ollama_client.h
native/core-ai/tests/: CMakeLists.txt  test_ai_catalog.cpp  test_ai_hf_cloud.cpp  test_ai_ollama.cpp
native/core-automation/include/kelpie/: base64.h  element_selector_script.h  form_control_script.h  js_string_literal.h  response_helpers.h
native/core-automation/src/: response_helpers.cpp
native/core-mcp/src/: mcp_tool.cpp
native/core-mcp/tests/: test_mcp_registry.cpp
native/core-protocol/include/mollotov/: platform.h  types.h  viewport_presets_c_api.h
native/core-protocol/src/: platform.cpp  viewport_presets_c_api.cpp
native/core-state/include/kelpie/: history_store.h  state_c_api.h
native/core-state/include/mollotov/: network_traffic_store.h
native/core-state/src/: history_store.cpp  network_traffic_store.cpp  state_c_api.cpp  store_support.h
native/core-state/tests/: CMakeLists.txt  test_history_store.cpp  test_history_store_extended.cpp
native/engine-chromium-desktop/: CMakeLists.txt
native/engine-chromium-desktop/include/mollotov/: cef_app_factory.h  cef_renderer.h  desktop_app.h  desktop_bridge.h  desktop_engine.h  desktop_http_server.h  desktop_mcp_server.h  desktop_mdns.h  desktop_router.h
native/engine-chromium-desktop/src/: cef_app_factory.cpp  cef_renderer.cpp  desktop_app.cpp  desktop_bridge.cpp  desktop_engine.cpp  desktop_engine_stub.cpp  desktop_http_server.cpp  desktop_mcp_server.cpp  desktop_router.cpp
native/engine-chromium-desktop/src/handlers/: bookmark_handler.cpp  bookmark_handler.h  browser_mgmt_handler.cpp  browser_mgmt_handler.h  console_handler.cpp  console_handler.h  cookie_handler.cpp  cookie_handler.h  device_handler.cpp  device_handler.h  dom_handler.cpp  dom_handler.h  evaluate_handler.cpp  evaluate_handler.h  handler_support.h  history_handler.cpp  history_handler.h  interaction_handler.cpp  interaction_handler.h  navigation_handler.cpp  navigation_handler.h  network_handler.cpp  network_handler.h  renderer_handler.cpp  renderer_handler.h  screenshot_handler.cpp  screenshot_handler.h  scroll_handler.cpp  scroll_handler.h  viewport_handler.cpp  viewport_handler.h
native/engine-chromium-desktop/tests/: CMakeLists.txt  test_desktop_handlers.cpp  test_desktop_mcp_server.cpp  test_desktop_router.cpp
scripts/: build-linux-package-repos.sh  build-linux-runtime-bundle.sh  download-cef.sh  download-gecko-runtime.sh  ios-select.sh  package-linux-appimage.sh  package-linux-deb.sh  package-linux-rpm.sh
site/: index.html
web/: index.html
(+414 files in other folders)
