function(add_ai_test name)
  add_executable(${name} ${ARGN})
  target_link_libraries(${name} PRIVATE mollotov_core_ai)
  add_test(NAME ${name} COMMAND ${name})
endfunction()

add_ai_test(test_ai_catalog test_ai_catalog.cpp)
add_ai_test(test_ai_hf_cloud test_ai_hf_cloud.cpp)
add_ai_test(test_ai_ollama test_ai_ollama.cpp)
add_ai_test(test_ai_store test_ai_store.cpp)
